# OpenCL-CTS

./: CMakeLists.txt
test_common/: CMakeLists.txt
test_common/harness/: dllio.cpp  dllio.h  dllio_hooks.h
test_conformance/: CMakeCommon.txt  CMakeLists.txt
test_conformance/spir/: CMakeLists.txt
